--- a/public/static/services/cargo.html
+++ b/public/static/services/cargo.html
@@ -36,11 +36,12 @@
                     </ul>
                 </nav>
                 <div class="header-actions">
-                    <a href="tel:+78001234567" class="phone-link">
+                    <a href="tel:0" class="phone-link">
                         <i class="fas fa-phone"></i>
-                        <span>8 (800) 123-45-67</span>
+                        <span>0 (000) 00-00-00</span>
                     </a>
                     <a href="../request.html" class="btn btn-primary">Оставить заявку</a>
+                    <button class="lang-toggle" type="button" data-lang-toggle>EN</button>
                 </div>
                 <button class="burger" id="burger" aria-label="Меню">
                     <span></span>
@@ -170,11 +171,11 @@
                         <ul>
                             <li>
                                 <i class="fas fa-phone"></i>
-                                <a href="tel:+78001234567">8 (800) 123-45-67</a>
+                                <a href="tel:0">0 (000) 00-00-00</a>
                             </li>
                             <li>
                                 <i class="fab fa-whatsapp"></i>
-                                <a href="https://wa.me/78001234567">WhatsApp</a>
+                                <span>WhatsApp</span>
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
@@ -206,9 +207,9 @@
                 </div>
                 <div class="cta-buttons">
                     <a href="../request.html" class="btn btn-white">Оставить заявку</a>
-                    <a href="tel:+78001234567" class="btn btn-outline-white">
+                    <a href="tel:0" class="btn btn-outline-white">
                         <i class="fas fa-phone"></i>
-                        8 (800) 123-45-67
+                        0 (000) 00-00-00
                     </a>
                 </div>
             </div>
@@ -226,9 +227,9 @@
                     </a>
                     <p>Надёжный партнёр в сфере грузоперевозок. Более 10 лет успешной работы на рынке логистических услуг.</p>
                     <div class="social-links">
-                        <a href="#" aria-label="VKontakte"><i class="fab fa-vk"></i></a>
-                        <a href="#" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
-                        <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                        <span aria-label="VKontakte"><i class="fab fa-vk"></i></span>
+                        <span aria-label="Telegram"><i class="fab fa-telegram"></i></span>
+                        <span aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></span>
                     </div>
                 </div>
                 <div class="footer-col">
@@ -254,7 +255,7 @@
                     <ul class="footer-contacts">
                         <li>
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+78001234567">8 (800) 123-45-67</a>
+                            <a href="tel:0">0 (000) 00-00-00</a>
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
