--- a/public/static/contacts.html
+++ b/public/static/contacts.html
@@ -98,7 +98,7 @@
                                     <i class="fas fa-envelope"></i>
                                     <div>
                                         <span data-i18n data-i18n-en="Email:">Email:</span>
-                                        <a href="mailto:info@logistikpro.ru">info@logistikpro.ru</a>
+                                        <a href="mailto:info@test.ru">info@test.ru</a>
                                     </div>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                             </div>
                             <div class="card-content">
                                 <h3 data-i18n data-i18n-en="Telegram">Telegram</h3>
-                                <p data-i18n data-i18n-en="@logistikpro">@logistikpro</p>
+                                <p data-i18n data-i18n-en="@Test">@Test</p>
                                 <span class="card-link" data-i18n-html data-i18n-html-en="Open chat <i class=&quot;fas fa-external-link-alt&quot;></i>">
                                     Открыть чат <i class="fas fa-external-link-alt"></i>
                                 </span>
@@ -206,9 +206,9 @@
                             <i class="fas fa-phone"></i>
                             0 (000) 00-00-00
                         </a>
-                        <a href="mailto:orders@logistikpro.ru">
+                        <a href="mailto:@Test@gmail.com">
                             <i class="fas fa-envelope"></i>
-                            orders@logistikpro.ru
+                            @Test@gmail.com
                         </a>
                     </div>
                 </div>
@@ -224,9 +224,9 @@
                             <i class="fas fa-phone"></i>
                             0 (000) 00-00-00
                         </a>
-                        <a href="mailto:b2b@logistikpro.ru">
+                        <a href="mailto:@Test@gmail.com">
                             <i class="fas fa-envelope"></i>
-                            b2b@logistikpro.ru
+                            @Test@gmail.com
                         </a>
                     </div>
                 </div>
@@ -242,9 +242,9 @@
                             <i class="fas fa-phone"></i>
                             0 (000) 00-00-00
                         </a>
-                        <a href="mailto:buh@logistikpro.ru">
+                        <a href="mailto:@Test@gmail.com">
                             <i class="fas fa-envelope"></i>
-                            buh@logistikpro.ru
+                            @Test@gmail.com
                         </a>
                     </div>
                 </div>
@@ -260,9 +260,9 @@
                             <i class="fas fa-phone"></i>
                             0 (000) 00-00-00
                         </a>
-                        <a href="mailto:claims@logistikpro.ru">
+                        <a href="mailto:@Test@gmail.com">
                             <i class="fas fa-envelope"></i>
-                            claims@logistikpro.ru
+                            @Test@gmail.com
                         </a>
                     </div>
                 </div>
@@ -371,7 +371,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:info@logistikpro.ru">info@logistikpro.ru</a>
+                            <a href="mailto:info@test.ru">info@test.ru</a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
