--- a/public/static/request.html
+++ b/public/static/request.html
@@ -285,11 +285,11 @@
                                     <strong data-i18n data-i18n-en="Telegram">Telegram</strong>
                                 </div>
                             </div>
-                            <a href="mailto:info@logistikpro.ru" class="quick-link email">
+                            <a href="mailto:info@test.ru" class="quick-link email">
                                 <i class="fas fa-envelope"></i>
                                 <div>
                                     <span data-i18n data-i18n-en="Email">Email</span>
-                                    <strong>info@logistikpro.ru</strong>
+                                    <strong>info@test.ru</strong>
                                 </div>
                             </a>
                         </div>
@@ -377,7 +377,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:info@logistikpro.ru">info@logistikpro.ru</a>
+                            <a href="mailto:info@test.ru">info@test.ru</a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
