--- a/public/static/services/cargo.html
+++ b/public/static/services/cargo.html
@@ -179,7 +179,7 @@
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                <a href="mailto:cargo@logistikpro.ru">cargo@logistikpro.ru</a>
+                                <a href="mailto:@Test@gmail.com">@Test@gmail.com</a>
                             </li>
                         </ul>
                     </div>
@@ -259,7 +259,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:info@logistikpro.ru">info@logistikpro.ru</a>
+                            <a href="mailto:info@test.ru">info@test.ru</a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
