--- a/public/static/services/corporate.html
+++ b/public/static/services/corporate.html
@@ -243,11 +243,11 @@
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                <a href="mailto:b2b@logistikpro.ru">b2b@logistikpro.ru</a>
+                                <a href="mailto:@Test@gmail.com">@Test@gmail.com</a>
                             </li>
                             <li>
                                 <i class="fab fa-telegram"></i>
-                                <span>@logistikpro_b2b</span>
+                                <span>@Test</span>
                             </li>
                         </ul>
                     </div>
@@ -327,7 +327,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:info@logistikpro.ru">info@logistikpro.ru</a>
+                            <a href="mailto:info@test.ru">info@test.ru</a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
