--- a/public/static/calculator.html
+++ b/public/static/calculator.html
@@ -375,7 +375,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:info@logistikpro.ru">info@logistikpro.ru</a>
+                            <a href="mailto:info@test.ru">info@test.ru</a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
