--- a/public/static/index.html
+++ b/public/static/index.html
@@ -275,7 +275,7 @@
                             <i class="fab fa-telegram"></i>
                             <div>
                                 <span data-i18n data-i18n-en="Telegram">Telegram</span>
-                                <span data-i18n data-i18n-en="@logistikpro">@logistikpro</span>
+                                <span data-i18n data-i18n-en="@Test">@Test</span>
                             </div>
                         </div>
                     </div>
@@ -358,7 +358,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:info@logistikpro.ru">info@logistikpro.ru</a>
+                            <a href="mailto:info@test.ru">info@test.ru</a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
