--- a/public/static/services/express.html
+++ b/public/static/services/express.html
@@ -195,7 +195,7 @@
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                <a href="mailto:express@logistikpro.ru">express@logistikpro.ru</a>
+                                <a href="mailto:@Test@gmail.com">@Test@gmail.com</a>
                             </li>
                         </ul>
                     </div>
@@ -275,7 +275,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:info@logistikpro.ru">info@logistikpro.ru</a>
+                            <a href="mailto:info@test.ru">info@test.ru</a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
