--- a/public/static/services/regional.html
+++ b/public/static/services/regional.html
@@ -206,7 +206,7 @@
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                <a href="mailto:regional@logistikpro.ru">regional@logistikpro.ru</a>
+                                <a href="mailto:@Test@gmail.com">@Test@gmail.com</a>
                             </li>
                         </ul>
                     </div>
@@ -286,7 +286,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:info@logistikpro.ru">info@logistikpro.ru</a>
+                            <a href="mailto:info@test.ru">info@test.ru</a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
