--- a/public/static/contacts.html
+++ b/public/static/contacts.html
@@ -113,9 +113,7 @@
                             <div class="card-content">
                                 <h3 data-i18n data-i18n-en="WhatsApp">WhatsApp</h3>
                                 <p data-i18n data-i18n-en="Message us in the messenger">Напишите нам в мессенджер</p>
-                                <span class="card-link" data-i18n-html data-i18n-html-en="Open chat <i class=&quot;fas fa-external-link-alt&quot;></i>">
-                                    Открыть чат <i class="fas fa-external-link-alt"></i>
-                                </span>
+                                <span class="card-link" data-i18n-html data-i18n-html-en="Open chat <i class=&quot;fas fa-external-link-alt&quot;></i>">Открыть чат <i class="fas fa-external-link-alt"></i></span>
                             </div>
                         </div>
 
@@ -126,9 +124,7 @@
                             <div class="card-content">
                                 <h3 data-i18n data-i18n-en="Telegram">Telegram</h3>
                                 <p data-i18n data-i18n-en="@Test">@Test</p>
-                                <span class="card-link" data-i18n-html data-i18n-html-en="Open chat <i class=&quot;fas fa-external-link-alt&quot;></i>">
-                                    Открыть чат <i class="fas fa-external-link-alt"></i>
-                                </span>
+                                <span class="card-link" data-i18n-html data-i18n-html-en="Open chat <i class=&quot;fas fa-external-link-alt&quot;></i>">Открыть чат <i class="fas fa-external-link-alt"></i></span>
                             </div>
                         </div>
                     </div>
