--- a/public/static/calculator.html
+++ b/public/static/calculator.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        (function() {
+            const storedLanguage = localStorage.getItem('site-language');
+            if (storedLanguage === 'en' || storedLanguage === 'ru') {
+                document.documentElement.lang = storedLanguage;
+            }
+            document.documentElement.classList.add('i18n-loading');
+        })();
+    </script>
     <title data-i18n data-i18n-en="Delivery calculator - LogistikPro">Калькулятор доставки - ЛогистикПро</title>
     <meta name="description" data-i18n-content data-i18n-content-en="Online cargo delivery cost calculator. Get a quote in 1 minute." content="Онлайн-калькулятор стоимости доставки грузов. Рассчитайте стоимость перевозки за 1 минуту.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
