--- a/public/static/index.html
+++ b/public/static/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        (function() {
+            const storedLanguage = localStorage.getItem('site-language');
+            if (storedLanguage === 'en' || storedLanguage === 'ru') {
+                document.documentElement.lang = storedLanguage;
+            }
+            document.documentElement.classList.add('i18n-loading');
+        })();
+    </script>
     <title data-i18n data-i18n-en="LogistikPro - Reliable freight transport across Russia">ЛогистикПро - Надёжные грузоперевозки по всей России</title>
     <meta name="description" data-i18n-content data-i18n-content-en="LogistikPro transport company - freight, express, and intercity delivery. Calculate the cost online!" content="Транспортная компания ЛогистикПро - грузоперевозки, экспресс-доставка, междугородняя доставка. Рассчитайте стоимость онлайн!">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
