--- a/public/static/request.html
+++ b/public/static/request.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        (function() {
+            const storedLanguage = localStorage.getItem('site-language');
+            if (storedLanguage === 'en' || storedLanguage === 'ru') {
+                document.documentElement.lang = storedLanguage;
+            }
+            document.documentElement.classList.add('i18n-loading');
+        })();
+    </script>
     <title data-i18n data-i18n-en="Submit a request - LogistikPro">Оставить заявку - ЛогистикПро</title>
     <meta name="description" data-i18n-content data-i18n-content-en="Submit a freight request. We will contact you within 15 minutes to clarify the details." content="Оставьте заявку на грузоперевозку. Мы свяжемся с вами в течение 15 минут для уточнения деталей.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
