--- a/public/static/services/cargo.html
+++ b/public/static/services/cargo.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        (function() {
+            const storedLanguage = localStorage.getItem('site-language');
+            if (storedLanguage === 'en' || storedLanguage === 'ru') {
+                document.documentElement.lang = storedLanguage;
+            }
+            document.documentElement.classList.add('i18n-loading');
+        })();
+    </script>
     <title data-i18n data-i18n-en="Freight transport - LogistikPro">Грузоперевозки - ЛогистикПро</title>
     <meta name="description" data-i18n-content data-i18n-content-en="Professional freight transport across Russia. Consolidated and full truck loads with any payload." content="Профессиональные грузоперевозки по всей России. Сборные и полные загрузки автотранспорта любой грузоподъёмности.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
