--- a/public/static/services/corporate.html
+++ b/public/static/services/corporate.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        (function() {
+            const storedLanguage = localStorage.getItem('site-language');
+            if (storedLanguage === 'en' || storedLanguage === 'ru') {
+                document.documentElement.lang = storedLanguage;
+            }
+            document.documentElement.classList.add('i18n-loading');
+        })();
+    </script>
     <title data-i18n data-i18n-en="For corporate clients - LogistikPro">Корпоративным клиентам - ЛогистикПро</title>
     <meta name="description" data-i18n-content data-i18n-content-en="Logistics solutions for business. Individual terms, contract relationships, a personal manager, and a flexible discount system." content="Логистические решения для бизнеса. Индивидуальные условия, договорные отношения, персональный менеджер и гибкая система скидок.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
