--- a/public/static/services/express.html
+++ b/public/static/services/express.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        (function() {
+            const storedLanguage = localStorage.getItem('site-language');
+            if (storedLanguage === 'en' || storedLanguage === 'ru') {
+                document.documentElement.lang = storedLanguage;
+            }
+            document.documentElement.classList.add('i18n-loading');
+        })();
+    </script>
     <title data-i18n data-i18n-en="Express delivery - LogistikPro">Экспресс-доставка - ЛогистикПро</title>
     <meta name="description" data-i18n-content data-i18n-content-en="Urgent express delivery of documents and cargo. Guaranteed delivery in the shortest time across Russia." content="Срочная экспресс-доставка документов и грузов. Гарантия доставки в кратчайшие сроки по всей России.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
