--- a/public/static/services/regional.html
+++ b/public/static/services/regional.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        (function() {
+            const storedLanguage = localStorage.getItem('site-language');
+            if (storedLanguage === 'en' || storedLanguage === 'ru') {
+                document.documentElement.lang = storedLanguage;
+            }
+            document.documentElement.classList.add('i18n-loading');
+        })();
+    </script>
     <title data-i18n data-i18n-en="Intercity delivery - LogistikPro">Междугородняя доставка - ЛогистикПро</title>
     <meta name="description" data-i18n-content data-i18n-content-en="Intercity and regional freight delivery. Regular routes between Russian cities with optimal timelines." content="Междугородняя и региональная доставка грузов. Регулярные рейсы между городами России с оптимальными сроками.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
